<resources>
<string name="app_name">Calculator COSW</string>

<!-- numbers -->
<string name="number0"> 0 </string>
<string name="number1"> 1 </string>
<string name="number2"> 2 </string>
<string name="number3"> 3 </string>
<string name="number4"> 4 </string>
<string name="number5"> 5 </string>
<string name="number6"> 6 </string>
<string name="number7"> 7 </string>
<string name="number8"> 8 </string>
<string name="number9"> 9 </string>

<!-- Signs-->
<string name="sum"> + </string>
<string name="subtraction"> - </string>
<string name="multiplication"> * </string>
<string name="division"> / </string>

<!-- Others-->
<string name="clear"> AC </string>
<string name="signs">+/-</string>

<!-- Sin Cos Tan-->
<string name="sin"> SIN </string>
<string name="cos"> COS </string>
<string name="tan"> TAN </string>

<string name="percentage"> % </string>
<string name="inverse"> 1/x </string>
<string name="absoluteValue"> | x |  </string>


</resources>

