<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.mape.calculator.MainCalculator">

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="146dp"
        android:layout_alignEnd="@+id/button13"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button13"
        android:background="@android:color/background_light"
        android:gravity="right"
        android:text="0"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="40sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:text="@string/percentage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="percentage"
            android:layout_weight="1"/>
        <Button
            android:text="@string/inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="inverse"
            android:layout_weight="1" />
        <Button
            android:text="@string/absoluteValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="absoluteValue"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_weight="1">
        <Button
            android:text="@string/sin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="sin"
            android:layout_weight="1"/>
        <Button
            android:text="@string/cos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="cos"
            android:layout_weight="1"/>
        <Button
            android:text="@string/tan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="tan"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_weight="1">
        <Button
            android:text="@string/number7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_seven"/>
        <Button
            android:text="@string/number8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_eight"/>
        <Button
            android:text="@string/number9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_nine"/>
        <Button
            android:text="@string/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="division"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_weight="1">
        <Button
            android:text="@string/number4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_four"/>
        <Button
            android:text="@string/number5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_five"/>
        <Button
            android:text="@string/number6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_six"/>
        <Button
            android:text="@string/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="multiplication"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_weight="1">
        <Button
            android:text="@string/number1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_one" />
        <Button
            android:text="@string/number2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_two" />
        <Button
            android:text="@string/number3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_three"/>
        <Button
            android:text="@string/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="subst"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="clear"/>
        <Button
            android:text="@string/number0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_cero"/>
        <Button
            android:text="@string/signs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="signs"/>
        <Button
            android:text="@string/sum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="sum"/>
    </LinearLayout>

</LinearLayout>
